# ThyraX-CDSS

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_agent.py  train_model.py
app/agent/: agent.py  tools.py
app/core/: config.py  database.py  mlops.py
app/models/: patient.py
app/routers/: chat.py  clinical.py  image.py  labs.py  patient.py
app/schemas/: chat.py  clinical.py  image.py  labs.py  patient.py
app/segmentation/: model.py
frontend/: app.py
mlruns/1/models/m-60c8d15eb66f46ef8204cf2ce8ccc17c/artifacts/: MLmodel  conda.yaml  model.pkl  registered_model_meta
mlruns/2/models/m-d81e247ae121426a85ad93f474d791fe/artifacts/: MLmodel  conda.yaml  model.ubj  python_env.yaml
models/: compressed.dvc
scripts/: register_mlflow.py  setup_azure_vm.sh
